// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField select with headers, dividers and actions should filter corresponding headers and dividers when search applied 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "isHeader": true,
      "label": "Group 1",
    },
    Object {
      "isAction": true,
      "node": <span>
        Action 1
      </span>,
      "onClick": [Function],
    },
    Object {
      "label": "Bar",
      "value": "bar",
    },
    Object {
      "isDivider": true,
    },
    Object {
      "isHeader": true,
      "label": "Group 2",
    },
    Object {
      "label": "Baz",
      "value": "baz",
    },
    Object {
      "isDivider": true,
    },
    Object {
      "isHeader": true,
      "label": "Group 3",
    },
    Object {
      "label": "Lorem ipsum",
      "value": "loremipsum",
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField select with headers, dividers and actions should filter corresponding headers and dividers when search applied 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "isHeader": true,
      "label": "Group 1",
    },
    Object {
      "isAction": true,
      "node": <span>
        Action 1
      </span>,
      "onClick": [Function],
    },
    Object {
      "label": "Bar",
      "value": "bar",
    },
    Object {
      "isDivider": true,
    },
    Object {
      "isHeader": true,
      "label": "Group 2",
    },
    Object {
      "label": "Baz",
      "value": "baz",
    },
  ],
  "input": "ba",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should filter when rerendered 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should handle key down event Enter/Tab (existing value) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should handle key down event Enter/Tab (existing value) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should handle key down event Enter/tab (custom value) 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "isFocused": false,
  "optionsOpen": true,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should handle key down event Enter/tab (custom value) 2`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "isFocused": false,
  "optionsOpen": true,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should handle key down event Escape 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should init state with custom props 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should init state with default props 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should render a select input with custom props 1`] = `
<div
  style={
    Object {
      "background": "red",
    }
  }
>
  <UncontrolledDropdown
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      color="secondary"
      data-toggle="dropdown"
      tag="div"
    >
      <ContextConsumer>
        <Component />
      </ContextConsumer>
    </DropdownToggle>
    <DropdownMenu
      className="options"
      flip={true}
      tag="div"
    >
      <DropdownItem
        className="option option--focused"
        onClick={[Function]}
        onMouseEnter={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        <span>
          Second
        </span>
      </DropdownItem>
    </DropdownMenu>
  </UncontrolledDropdown>
</div>
`;

exports[`SelectField should render a select input with default props 1`] = `
<div
  style={Object {}}
>
  <UncontrolledDropdown
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      color="secondary"
      data-toggle="dropdown"
      tag="div"
    >
      <ContextConsumer>
        <Component />
      </ContextConsumer>
    </DropdownToggle>
    <DropdownMenu
      className="options"
      flip={true}
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        No result
      </DropdownItem>
    </DropdownMenu>
  </UncontrolledDropdown>
</div>
`;

exports[`SelectField should reset state on blur 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should set the minWidth of the input according to the length of the longest label 1`] = `
<div
  style={
    Object {
      "background": "red",
    }
  }
>
  <UncontrolledDropdown
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      color="secondary"
      data-toggle="dropdown"
      tag="div"
    >
      <ContextConsumer>
        <Component />
      </ContextConsumer>
    </DropdownToggle>
    <DropdownMenu
      className="options"
      flip={true}
      tag="div"
    >
      <DropdownItem
        className="option option--focused"
        onClick={[Function]}
        onMouseEnter={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        <span>
          Second
        </span>
      </DropdownItem>
    </DropdownMenu>
  </UncontrolledDropdown>
</div>
`;

exports[`SelectField should update state when search changes (custom NOT values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should update state when search changes (custom NOT values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should update state when search changes (custom values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should update state when search changes (custom values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "isFocused": false,
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should use custom props 1`] = `
Object {
  "allowCustomValue": false,
  "fixedWidth": false,
  "fullWidth": false,
  "id": null,
  "onChange": [Function],
  "onSearchChange": [Function],
  "options": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "placeholder": "placeholder",
  "required": false,
  "singular": "option",
  "style": Object {
    "background": "red",
  },
  "value": 1,
}
`;

exports[`SelectField should use default props 1`] = `
Object {
  "allowCustomValue": false,
  "fixedWidth": false,
  "fullWidth": false,
  "id": null,
  "onChange": [Function],
  "onSearchChange": [Function],
  "options": Array [],
  "placeholder": "Select an option",
  "required": false,
  "singular": "option",
  "style": Object {},
}
`;
